Payment Sandbox hinzugefügt, Einkaufsprozess verändert
